--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "paytm/paytmchecksum": "^1.1",
         "razorpay/razorpay": "2.*",
         "spatie/laravel-permission": "^4.0",
-        "tymon/jwt-auth": "^1.0"
+        "tymon/jwt-auth": "^1.0",
+        "kyslik/column-sortable": "^6.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
