--- a/composer.json
+++ b/composer.json
@@ -11,20 +11,20 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "kreait/firebase-php": "^5.0",
+        "kyslik/column-sortable": "^6.4",
         "laravel/framework": "^8.12",
         "laravel/jetstream": "^2.3",
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
         "laravelcollective/html": "^6.2",
         "livewire/livewire": "^2.0",
-        "paytm/paytmchecksum": "^1.1",
-        "razorpay/razorpay": "2.*",
         "maatwebsite/excel": "^3.1",
         "milon/barcode": "^8.0",
+        "paytm/paytmchecksum": "^1.1",
+        "razorpay/razorpay": "2.*",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/laravel-permission": "^4.0",
-        "tymon/jwt-auth": "^1.0",
-        "kyslik/column-sortable": "^6.0"
+        "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
