--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "kreait/firebase-php": "^5.0",
+        "kreait/laravel-firebase": "^3.1",
         "kyslik/column-sortable": "^6.4",
         "laravel/framework": "^8.12",
         "laravel/jetstream": "^2.3",
